# dj-procrastinate

./: README.md  pyproject.toml
dj_procrastinate/: apps.py
dj_procrastinate/management/commands/: procrastinate.py
example/example/: asgi.py  settings.py  urls.py  wsgi.py
