[tool.poetry]
name = "dj-procrastinate"
version = "0.1.0"
description = "Postgres task queue for django."
authors = ["Tobi-De <tobidegnon@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tobi-De/dj-procrastinate"
homepage = "https://github.com/Tobi-De/dj-procrastinate"
keywords = ["django", "python", "task", "queue", "postgres", "postgresql"]
packages=[
    { include = "dj_procrastinate" },
    { include = "dj_procrastinate/migrations" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3"
procrastinate = "^0.24.1"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-django = "^4.5.2"
mypy = "^0.942"
pre-commit = "^2.17.0"
black = "^22.3.0"
django-stubs = "^1.10.1"
factory-boy = "^3.2.1"
ipython = "^8.2.0"
poetryup = "^0.6.0"

[tool.black]
target-version = ['py37']

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"

[tool.mypy]
mypy_path = "dj_shop_cart/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--ds=tests.settings --reuse-db"
python_files = ["tests.py", "test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
